Images rendering blurry fix

--- a/front/features/products/listing/comps/subcategories/gallery.module.scss
+++ b/front/features/products/listing/comps/subcategories/gallery.module.scss
@@ -2,15 +2,23 @@
 @import "node_modules/rfs/sass.sass";
 
 .subcategories_gallery {
-  display: flex;
-  align-items: center;
-  //   gap: 1rem;
+  padding: 0 3rem;
 
-  --bs-gutter-y: 1.5rem;
-  @media (min-width: 1400px) {
-    .col_xl_1_5 {
-      flex: 0 0 11%;
-      max-width: 11%;
-    }
+  .col {
+    flex: 0 0 11%;
+    max-width: 11%;
   }
+
+  // @media screen and (width < 1400px) {
+  //   .col {
+  //     flex: 0 0 12%;
+  //     max-width: 12%;
+  //   }
+  // }
+  // @media screen and (width < 1200px) {
+  //   .col {
+  //     flex: 0 0 14%;
+  //     max-width: 14%;
+  //   }
+  // }
 }
